# LearnQTOpenGL

./: .gitignore  CMakeLists.txt  QTOpenGLTemplate.pro  build.bat
shader/: cube.frag  cube.vert  light.frag  mesh.frag  rectangle.frag  rectangle.vert
src/: Cube.cpp  Cube.h  camera.h  main.cpp  mainwindow.cpp  mainwindow.h  mesh.cpp  mesh.h  model.cpp  model.h  openglwidget.cpp  openglwidget.h
ui/: mainwindow.ui
